trying to add the photo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <table>
 
     <tr>
-      <td> <img src="images\headshot.jpg"> </td>
+      <td> <img src="images\headshot.jpg" alt="Future Frontend Developer"> </td>
       <td>
         <h1><a href="https://www.linkedin.com/in/crjoseph-17b1aa230/">Christina Rose Joseph</a></h1>
         <p><em>Misanthropic Anthropologist <strong>
