--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <p>I am a former Anthropology Ph.D. student with experience working customer service in various industries who decided to switch careers from the path of Academia to Web Development. </p>
 
       </td>
-    </tr></table>
+    </tr>
+  <a href="https://github.com/BLASIAN-DUMPLING/CV/blob/main/Contact%20Me.html">Contact Me</a>
+  </table>
     <hr>
     <h3>Education</h3>
   <p>
@@ -65,7 +67,7 @@
   </table>
   <br>
   <a href="https://github.com/BLASIAN-DUMPLING/CV/blob/main/Hobbies.html">My Hobbies</a>
-  <a href="C:\Users\chris\OneDrive\Attachments\Desktop\Web Development\HTML - Personal Site\Contact Me.html">Contact Me</a>
+  
   <hr>
   <h3>Skills</h3>
   <table>
