--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <table>
 
     <tr>
-      <td> <img src="https://github.com/BLASIAN-DUMPLING/CV/tree/main/images" alt="Future Frontend Developer"> </td>
+      <td> <img src="C:\Users\chris\OneDrive\Attachments\Desktop\Web Development\HTML - Personal Site\images\headshot.jpg" alt="Future Frontend Developer"> </td>
       <td>
         <h1><a href="https://www.linkedin.com/in/crjoseph-17b1aa230/">Christina Rose Joseph</a></h1>
         <p><em>Misanthropic Anthropologist <strong>
@@ -26,8 +26,7 @@
         <p>I am a former Anthropology Ph.D. student with experience working customer service in various industries who decided to switch careers from the path of Academia to Web Development. </p>
 
       </td>
-    </tr>
-   </table>
+    </tr></table>
     <hr>
     <h3>Education</h3>
   <p>
@@ -65,9 +64,9 @@
     </tr>
   </table>
   <br>
-  <a href="https://github.com/BLASIAN-DUMPLING/CV/blob/main/Hobbies.html">My Hobbies</a>
-  <a href="https://github.com/BLASIAN-DUMPLING/CV/blob/main/Contact%20Me.html">Contact Me</a>
-   <hr>
+  <a href="C:\Users\chris\OneDrive\Attachments\Desktop\Web Development\HTML - Personal Site\Hobbies.html">My Hobbies</a>
+  <a href="C:\Users\chris\OneDrive\Attachments\Desktop\Web Development\HTML - Personal Site\Contact Me.html">Contact Me</a>
+  <hr>
   <h3>Skills</h3>
   <table>
 
@@ -84,6 +83,6 @@
       <td>★★</td>
     </tr>
   </table>
-   </body>
+</body>
 
 </html>
