--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
   </table>
   <br>
   <a href="C:\Users\chris\OneDrive\Attachments\Desktop\Web Development\HTML - Personal Site\Hobbies.html">My Hobbies</a>
-  <a href="C:\Users\chris\OneDrive\Attachments\Desktop\Web Development\HTML - Personal Site\Contact Me.html">Contact Me</a>
+  <a href="https://github.com/BLASIAN-DUMPLING/CV/blob/main/Contact%20Me.html">Contact Me</a>
+  
   <hr>
   <h3>Skills</h3>
   <table>
