--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </tr>
   </table>
   <br>
-  <a href="C:\Users\chris\OneDrive\Attachments\Desktop\Web Development\HTML - Personal Site\Hobbies.html">My Hobbies</a>
+  <a href="https://github.com/BLASIAN-DUMPLING/CV/blob/main/Hobbies.html">My Hobbies</a>
   <a href="https://github.com/BLASIAN-DUMPLING/CV/blob/main/Contact%20Me.html">Contact Me</a>
   
   <hr>
