--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>Christina's Personal Site</title>
 </head>
 
 <body style="background-color: GhostWhite">
-
       <style>
       table,
       th, td
@@ -18,7 +16,7 @@
   <table>
 
     <tr>
-      <td> <img src="https://github.com/BLASIAN-DUMPLING/CV/blob/main/images/headshot.jpg?raw=true"> </td>
+      <td> <img src="images/headshot.jpg" alt="Future Frontend Developer"> </td>
       <td>
         <h1><a href="https://www.linkedin.com/in/crjoseph-17b1aa230/">Christina Rose Joseph</a></h1>
         <p><em>Misanthropic Anthropologist <strong>
@@ -38,10 +36,12 @@
   </ul>
   <hr>
   <h3>Work Experience</h3>
-  <table>
-
+  <table cedllspacing=:10">
+<thead>
+                          <tr>
     <th>Dates</th>
-    <th>Work</th>
+    <th>Work</th> </tr> </thead>
+                          <tbody>
     <tr>
       <td>2021 - </td>
       <td>Bartender at Watermark Baton Rouge</td>
@@ -61,16 +61,11 @@
     <tr>
       <td>2011-2014</td>
       <td>Supervisor at Teleperformance</td>
-    </tr>
+                          </tr> </tbody>
   </table>
-  <br>
-  <a href="https://github.com/BLASIAN-DUMPLING/CV/blob/main/Hobbies.html">My Hobbies</a>
-  <a href="https://github.com/BLASIAN-DUMPLING/CV/blob/main/Contact%20Me.html">Contact Me</a>
-  
-  <hr>
+      <hr>
   <h3>Skills</h3>
-  <table>
-
+  <table cellspacing="10">
     <tr>
       <td>Ethnography</td>
       <td>★★★★★</td>
@@ -84,6 +79,7 @@
       <td>★★</td>
     </tr>
   </table>
+      <a href="Hobbies.html">My Hobbies</a>
+  <a href="Contact%20Me.html">Contact Me</a>
 </body>
-
 </html>
