added traveling to the list.

--- a/Hobbies.html
+++ b/Hobbies.html
@@ -12,6 +12,7 @@
     <li>Learning about various cultures</li>
     <li>Learning to code</li>
     <li><a href="https://www.instagram.com/p/B3DZdGFFqbw/">Dining out</a></li>
+    <li>Traveling</li>
     <li>Going to Museums</li>
     <li>Gaming</li>
   </ol>
