--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
     </tr>
   </table>
                          <br>
-                         <a href="Contact%20Me.html">Contact Me</a>
+                         <a href="Contact-Me.html">Contact Me</a>
 </body>
 </html>
